--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/DarlonGomes/RepoProvas-API#readme",
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
