--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.0.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.18",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "^8.23.1",
@@ -46,9 +48,11 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
+    "supertest": "^6.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
