--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "tsc",
+    "test": "NODE_ENV=test jest -i",
+    "build": "tsc && npx prisma generate && npx prisma migrate deploy",
     "start": "node ./dist/app.js",
-    "dev": "nodemon ./src/app.ts"
+    "dev": "NODE_ENV=dev nodemon ./src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -53,6 +54,7 @@
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
     "supertest": "^6.2.4",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
