--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "rootDir": "./src",
+    // "rootDir": "./src",
+    "rootDirs": ["./src", "./tests"],
     "sourceMap": true,
     "outDir": "./dist",
     "removeComments": true,
@@ -13,6 +14,6 @@
     "checkJs": true,
     "moduleResolution": "node"
   },
-  "include": ["src"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules", "dist"]
 }
