--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "projeto20-repoprovas",
   "version": "1.0.0",
   "description": "<div align=\"center\">   <a href=\"https://github.com/Jbarezzi/Node-Express-TS-Template\">     <img src=\"https://cdn-icons-png.flaticon.com/512/5968/5968381.png\"  alt=\"TypeScriptLogo\" width=\"100\">   </a>",
-  "main": "./src/app.ts",
+  "main": "./src/server.ts",
   "directories": {
     "test": "tests"
   },
   "scripts": {
     "test": "NODE_ENV=test jest -i",
     "build": "tsc && npx prisma generate && npx prisma migrate deploy",
-    "start": "node ./dist/app.js",
-    "dev": "NODE_ENV=dev nodemon ./src/app.ts"
+    "start": "node ./dist/server.js",
+    "dev": "NODE_ENV=dev nodemon ./src/server.ts"
   },
   "repository": {
     "type": "git",
