--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm":"8.x"
   }
 }
