--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "NODE_ENV=test jest -i",
     "build": "tsc && npx prisma generate && npx prisma migrate deploy",
-    "start": "node ./dist/server.js",
+    "start": "node ./dist/src/server.js",
     "dev": "NODE_ENV=dev nodemon ./src/server.ts"
   },
   "repository": {
