--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.2",
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
@@ -61,6 +62,6 @@
   },
   "engines": {
     "node": "16.x",
-    "npm":"8.x"
+    "npm": "8.x"
   }
 }
