--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/DarlonGomes/RepoProvas-API#readme",
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
